2024-07-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-enable-run0-method): Adapt "run0" arguments.

2024-07-09  Stefan Kangas  <stefankangas@gmail.com>

	* tramp-adb.el (tramp-adb-handle-get-remote-uid):
	* tramp-cmds.el (tramp-recompile-elpa-command-completion-p):
	* tramp-crypt.el (tramp-crypt-command-completion-p):
	* tramp-message.el (tramp-debug-buffer-command-completion-p):
	* tramp-sh.el (tramp-use-connection-share):
	* tramp.el (tramp-command-completion-p): Checkdoc fixes.

2024-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-host-with-port-regexp): Declare.
	(tramp-set-syntax): Set also `tramp-host-with-port-regexp'.
	(tramp-build-host-with-port-regexp): New defun.
	(tramp-host-with-port-regexp): Make it a defvar.  (Bug#71972)

	* trampver.el.in (customize-package-emacs-version-alist):
	Change Tramp version integrated in Emacs 30.1.

2024-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.1 released

	* tramp-compat.el:
	* tramp-message.el (tramp-warning): Use `lwarn'.

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 30.1.

2024-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-exists-p): Check for property only.
	(tramp-skeleton-make-process): Don't set `default-directory'.
	(tramp-handle-make-process): Set it.  (Bug#71709)

	* tramp-message.el (tramp-backtrace): Print also in batch mode.

2024-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 29.4.

2024-06-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): Adapt docstring.
	Use connection-local value.

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Dump os-release when `tramp-verbose' is at least 9.

2024-06-16  Michael Albinus  <michael.albinus@gmx.de>
