@@ -1,3 +1,7 @@
+2024-07-15  Jim Porter  <jporterbugs@gmail.com>
+
+	* tramp.el (tramp-signal-process): Strip the "SIG" prefix when present.
+
 2024-07-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-enable-run0-method): Adapt "run0" arguments.
